--- a/index.html
+++ b/index.html
@@ -182,5 +182,6 @@
     >
       <h3 style="margin: auto">Copyright 2013-2014 ChordTela.com</h3>
     </div>
+    <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
