--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="col-md-6">
               <div class="position-relative">
                 <img
-                  src="/assets/img/ereclo.jpg"
+                  src="assets/img/ereclo.jpg"
                   class="img-fluid rounded shadow"
                   alt="Image"
                 />
