--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
     <!-- Hero Section -->
     <section id="home" class="pt-5 mt-5">
-      <div class="container mt-5 shadow">
+      <div class="container shadow">
         <div class="row">
-          <div class="col-6">
+          <div class="col-lg-6">
             <div
               id="heroCarousel"
               class="carousel slide"
@@ -104,7 +104,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 p-5 mt-4 d-flex flex-column">
+          <div class="col-lg-6 p-5 mt-4 d-flex flex-column">
             <h1 class="p-">
               Define Your Signature. Embrace Timeless Style with Ereclo
             </h1>
